# purrf

./: .gitignore  .ruff.toml  BUILD  CHANGELOG.md  MODULE.bazel  README.md  alembic.ini  app.py  app_test.py  lint.sh  package.json  pnpm-lock.yaml  requirements.txt
.github/: CODEOWNERS  labeler.yml
.github/workflows/: README.md  cut-release.yml  deploy-pages.yml  deploy-staging.yml  deploy-test.yml  labeler.yml  pr-title.yml  presubmit.yml  promote.yml
alembic_setup/: env.py
alembic_setup/versions/: 1056efa41572_change_program_feedback_to_jsonb.py  156f56629f81_add_email_thread_and_email_message_.py  205cf4cb5f2f_add_current_round_to_application.py  3186f77c39e6_add_application_comment_table.py  3a0cc23fe442_add_application_assignment.py  4c1e7a9b2f30_relax_users_subject_identifier_for_retirement.py  52ce4c2a71a4_make_completed_timestamp_nullable_and_.py  5b8efe125dac_add_application_activity_table.py  68d6e6cc6e53_add_user_emails_last_login_at.py  70d81c883d0c_replace_job_pending_form_schema_pending_.py  7117e5bd407d_add_round_to_evaluation.py  75256ef8e1ee_add_created_datetime_to_all_entities.py  7ab80335bdac_add_length_limit_to_current_stage_and_.py  82498a573699_add_stage_entered_at_to_application.py  866a9df543ab_add_evaluation.py  938f67fc6602_add_job_activity_table.py  95b36bb95db2_add_job_config_columns.py  99ac7eebad0d_drop_users_last_login_at.py  9b509b737039_retire_email_identity_rows_and_unconfirmed_claims.py  9f4a1c7e2b53_add_application_comment_mention_table.py  a1b2c3d4e2f1_recruiting_user_fields.py  a1b2c3d4e3f2_round_reapply_freeze_days.py  a1b2c3d4e4f3_create_job_table.py  a1b2c3d4e5f4_create_application_table.py  a654c3a8b8b4_add_blacklist_audit_columns.py  a7c4e9f21b56_drop_users_primary_email.py  b0e98c2dd68c_backfill_applied_stage_to_recruiter_.py  b3c7f1a9d4e2_add_application_and_application_.py  b78bd7956d7a_drop_user_identities_identity_type.py  b7e3c1d05a92_backfill_user_identities_and_emails.py  b8d2f5a91c37_drop_notification_read_at.py  c1f4d8a2b6e9_add_round_to_application_assignment.py  c56ad86a7887_change_timezone_of_users_entity_from_.py  c629f4c873ba_add_profile_survey_to_preferences_and_.py  cb7074b198ec_add_users_is_internal.py  cbfb424b9abb_relax_application_job_user_uniqueness.py  d253214bee6a_make_user_emails_email_globally_unique.py  dee5e8b0c892_add_user_identities_and_user_emails_.py  e1c8a3d4f6b2_add_last_login_at_to_users.py  e8a04c2f6b71_apply_length_limit_to_current_stage_.py  (+4 more)
backend/: BUILD  app.py  dev_runner.py  fast_app_dev_runner.py  prod_runner.py
backend/admin/: BUILD  permission_admin_controller.py  permission_admin_service.py
backend/authentication/: BUILD  authentication_controller.py  authentication_service.py  email_management_controller.py  email_management_service.py
backend/backfill/: BUILD  backfill_activity_application_gate.py  backfill_external_mentee.py  backfill_mentorship_records.py  backfill_pairs_records.py  backfill_users_profile_and_preferences.py  export_mentorship_records.py
backend/common/: BUILD  api_endpoints.py  asyncio_event_loop_manager.py  auth0_client.py  base.py  communication_enums.py  (+26 more)
frontend/: BUILD  package-lock.json  package.json  pnpm-lock.yaml  prototype.html  resume-demo.html  vite.config.js  vite.config.mjs  vite.config.pages.mjs
google/: BUILD  authentication_utils.py  chat_utils.py  constants.py  fetch_history_chat_message.py  google_api.py  pubsub_publisher.py  pubsub_subscriber_store.py
redis_dal/: BUILD  constants.py  redis_api.py  redis_client_factory.py  redis_query_utils.py  redis_utils.py
script/: auth0_passwordless_users_create.sh  postgres_up.sh
src/: BUILD  app.py
terraform/: README.md  backend.tf  main.tf  providers.tf  terraform.tfvars  variables.tf
tests/: BUILD  app_test.py
tools/: BUILD  api_response_wrapper.py  init_db.py  primary_email_readiness.py
(+1145 files in other folders)
